--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <h1>git project baru</h1>
         <h2>membuat project pertamaku</h2>
         <p>ini adalah project pertamaku dengan membuat file baru</p>
+        <p>GIT adalah sofware yang dikembangkan oleh pengembang UNIX, Linus Torvalds, pada tahun 2005,
+        GIT kini telah digunakan oleh jutaan perusahaan untuk melakukan manajemen efisiensi kode dan kontrol versi untuk project mereka.</p>
         <link rel="stylesheet" href="style.css">
     </body>
 </html>
