--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <p>ini adalah project pertamaku dengan membuat file baru</p>
         <p>GIT adalah sofware yang dikembangkan oleh pengembang UNIX, Linus Torvalds, pada tahun 2005,
         GIT kini telah digunakan oleh jutaan perusahaan untuk melakukan manajemen efisiensi kode dan kontrol versi untuk project mereka.</p>
+        <p>tugas baru</p>
         <link rel="stylesheet" href="style.css">
     </body>
 </html>
